Zipkin con Logback en formato JSON Limpieza de dependencias duplicadas